# bot

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp  threadsafequeue.hpp
src/storage/: storage.cpp  storage.hpp
